--- a/src/App.css
+++ b/src/App.css
@@ -64,10 +64,6 @@
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  overflow-wrap: break-word;
 }
 
 .note-header {
@@ -103,5 +99,44 @@
 .note-text {
   font-size: 1rem;
   font-weight: 500;
-  justify-self: left;
+
+  text-align: left;
+
+  word-break: break-word;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+}
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background: white;
+  padding: 1rem;
+  border-radius: 10px;
+  max-width: 400px;
+  width: 90%;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-content > .input-form {
+  width: 100%;
+  border: none;
+  box-shadow: none;
 }
