--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,20 @@
   gap: 1rem;
 }
 
+.input-header {
+  display: flex;
+  gap: 1rem;
+}
+
+.input-title {
+  flex: 2;
+}
+
+.input-category {
+  flex: 1;
+  width: 100%;
+}
+
 .input-btn {
   width: 100%;
   border: 1px solid #ccc;
@@ -61,7 +75,6 @@
   width: 11rem;
   padding: 0.5rem;
   margin: 0.5rem;
-  border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
