--- a/src/App.css
+++ b/src/App.css
@@ -153,3 +153,19 @@
   border: none;
   box-shadow: none;
 }
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  width: 70%;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  gap: 1rem;
+}
+
+.search-input {
+  width: 60%;
+}
